cluster/gitops/storage/rook-ceph/cluster/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: rook-ceph-cluster
specs:
  - description: storage.cephfs.csi.ceph.com-ctrlplugin
    endpointSelector: &cephfs_ctrlplugin_selector
      matchLabels:
        app: storage.cephfs.csi.ceph.com-ctrlplugin
    egress:
      # DNS resolution
      - &to_dns_resolver
        toEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: networking
              endpoints.netpols.home.arpa/cluster-dns: "true"
        toPorts:
          - ports:
              - port: "53"
                protocol: UDP
              - port: "53"
                protocol: TCP
      # To k8s api server for updating PVC statuses
      - &to_k8s_api_server
        toEntities:
          - kube-apiserver
        toPorts:
          - ports:
              - port: "6443"
                protocol: TCP
      # Allow access to the backing Ceph cluster
      # Access to monitors
      - &to_monitors
        toEndpoints:
          - &mon_selector
            matchLabels:
              app.kubernetes.io/name: ceph-mon
              app.kubernetes.io/component: cephclusters.ceph.rook.io
        toPorts:
          - ports:
              - port: "6789"
                protocol: TCP
              - port: "3300"
                protocol: TCP
      # Access to managers
      - &to_managers
        toEndpoints:
          - &managers_selector
            matchLabels:
              app.kubernetes.io/name: ceph-mgr
              app.kubernetes.io/component: cephclusters.ceph.rook.io
        toPorts:
          - ports:
              - port: "6800"
                protocol: TCP
      # Access to OSDs
      - &to_osds
        toEndpoints:
          - &osd_selector
            matchLabels:
              app.kubernetes.io/name: ceph-osd
              app.kubernetes.io/component: cephclusters.ceph.rook.io
        toPorts:
          - ports:
              - port: "6800"
                protocol: TCP
              - port: "6801"
                protocol: TCP
      # Access to MDS
      - &to_mds
        toEndpoints:
          - &mds_selector
            matchLabels:
              app.kubernetes.io/name: ceph-mds
              app.kubernetes.io/component: cephfilesystems.ceph.rook.io
        toPorts:
          - ports:
              - port: "6800"
                protocol: TCP
              - port: "6801"
                protocol: TCP
  - description: storage.rbd.csi.ceph.com-ctrlplugin
    endpointSelector: &rbd_ctrlplugin_selector
      matchLabels:
        app: storage.rbd.csi.ceph.com-ctrlplugin
    egress:
      - *to_dns_resolver
      - *to_k8s_api_server
      - *to_monitors
      - *to_managers
      - *to_osds
  - description: rook-ceph-exporter
    endpointSelector: &rook_ceph_exporter_selector
      matchLabels:
        app: rook-ceph-exporter
    egress:
      - *to_monitors
    ingress:
      # Metrics
      - fromEndpoints: &metrics_scraper_endpoint
          - matchLabels:
              io.kubernetes.pod.namespace: monitoring
              endpoints.netpols.home.arpa/metrics-scraper: "true"
        toPorts:
          - ports:
              - port: "9926"
                protocol: TCP
  - description: rook-ceph-mds
    endpointSelector: *mds_selector
    egress:
      - *to_monitors
      - *to_managers
      - *to_osds
    ingress:
      - fromEndpoints:
          - *managers_selector
          - *cephfs_ctrlplugin_selector
          - &rook_ceph_tools_selector
            matchLabels:
              app: rook-ceph-tools
        toPorts: &mds_ports
          - ports:
              - port: "6800"
                protocol: TCP
              - port: "6801"
                protocol: TCP
      # CSI nodeplugins are hostNetwork-only in 1.18+ (no nodePlugin.hostNetwork field)
      - fromEntities: &csi_node_entities
          - remote-node
        toPorts: *mds_ports
  - description: rook-ceph-mgr
    endpointSelector: *managers_selector
    egress:
      - *to_dns_resolver
      - *to_k8s_api_server
      - *to_monitors
      - *to_managers
      - *to_osds
      - *to_mds
      - toEndpoints:
          - &rgw_selector
            matchLabels:
              app.kubernetes.io/name: ceph-rgw
              app.kubernetes.io/component: cephobjectstores.ceph.rook.io
        toPorts:
          - ports:
              - port: "8080"
                protocol: TCP
      # Alertmanager access for the dashboard
      - toEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: monitoring
              endpoints.netpols.home.arpa/alertmanager-server: "true"
        toPorts:
          - ports:
              - port: "9093"
                protocol: TCP
      # Prometheus access for the dashboard
      - toEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: monitoring
              endpoints.netpols.home.arpa/time-series-supplier: "true"
        toPorts:
          - ports:
              - port: "8427"
                protocol: TCP
    ingress:
      # Communication with Ceph cluster services
      - fromEndpoints:
          - *mon_selector
          - *managers_selector
          - *osd_selector
          - *mds_selector
          - *rgw_selector
          - *cephfs_ctrlplugin_selector
          - *rbd_ctrlplugin_selector
          - &operator_selector
            matchLabels:
              app: rook-ceph-operator
          - *rook_ceph_tools_selector
          - &rook_ceph_crashcollector_selector
            matchLabels:
              app: rook-ceph-crashcollector
        toPorts: &mgr_ports
          - ports:
              - port: "6800"
                protocol: TCP
      - fromEntities: *csi_node_entities
        toPorts: *mgr_ports
      # Dashboard
      - fromEndpoints:
          - &gateway_selector
            matchLabels:
              io.kubernetes.pod.namespace: networking
              app.kubernetes.io/name: ingress-gateways
              gateway.networking.k8s.io/gateway-name: internal-gateway
        toPorts:
          - ports:
              - port: dashboard
                protocol: TCP
      # Metrics
      - fromEndpoints: *metrics_scraper_endpoint
        toPorts:
          - ports:
              - port: http-metrics
                protocol: TCP
  - description: rook-ceph-mon
    endpointSelector: *mon_selector
    egress:
      - *to_managers
      - *to_monitors
    ingress:
      # Communication with Ceph cluster services
      - fromEndpoints:
          - *mon_selector
          - *managers_selector
          - *osd_selector
          - *mds_selector
          - *rgw_selector
          - *operator_selector
          - *cephfs_ctrlplugin_selector
          - *rbd_ctrlplugin_selector
          - *rook_ceph_exporter_selector
          - *rook_ceph_tools_selector
          - *rook_ceph_crashcollector_selector
        toPorts: &mon_ports
          - ports:
              - port: "3300"
                protocol: TCP
              - port: "6789"
                protocol: TCP
      - fromEntities: *csi_node_entities
        toPorts: *mon_ports
  - description: rook-ceph-osd
    endpointSelector: *osd_selector
    egress:
      - *to_monitors
      - *to_managers
      # All ports
      # OSDs can communicate over hundreds of different ports
      - toEndpoints:
          - *osd_selector
    ingress:
      # Communication with Ceph cluster services
      - fromEndpoints:
          - *managers_selector
          - *osd_selector
          - *rgw_selector
          - *mds_selector
          - *cephfs_ctrlplugin_selector
          - *rbd_ctrlplugin_selector
          - *operator_selector
          - *rook_ceph_tools_selector
      - fromEntities: *csi_node_entities
        toPorts:
          - ports:
              - port: "6800"
                protocol: TCP
              - port: "6801"
                protocol: TCP
  - description: rook-ceph-rgw
    endpointSelector: *rgw_selector
    egress:
      - *to_monitors
      - *to_managers
      - *to_osds
    ingress:
      # Communication with Ceph cluster services
      - fromEndpoints:
          - *gateway_selector
          - *managers_selector
        toPorts:
          - ports:
              - port: "8080"
                protocol: TCP
  - description: rook-ceph-crashcollector
    endpointSelector: *rook_ceph_crashcollector_selector
    egress:
      - *to_monitors
      - *to_managers
  - description: rook-ceph-tools
    endpointSelector: *rook_ceph_tools_selector
    egress:
      - *to_monitors
      - *to_managers
      - *to_osds
      - *to_mds
